welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: ';' expected but 'return' found.
		} return 10
                  ^